Fixes to hopefully get mobile working better

--- a/style.css
+++ b/style.css
@@ -138,3 +138,12 @@ Text Domain:  podcastchild
 #stable-container audio {
 	vertical-align: middle;
 }
+
+@media only screen and (max-width: 768px) {
+	#stable-container {
+		display: block;
+		width: 50%;
+		bottom: 40px;
+		min-width: fit-content;
+	}
+}
